--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "prepare": "husky",
     "commitlint": "commitlint --edit"
   },
-  "homepage": "https://github.com/adonisjs/eslint-plugin-adonisjs#readme",
+  "homepage": "https://github.com/arapucajs/eslint-plugin#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/adonisjs/eslint-plugin-adonisjs.git"
+    "url": "git+https://github.com/arapucajs/eslint-plugin.git"
   },
   "bugs": {
-    "url": "https://github.com/adonisjs/eslint-plugin-adonisjs/issues"
+    "url": "https://github.com/arapucajs/eslint-plugin/issues"
   },
   "keywords": [
     "eslint",
@@ -57,17 +57,17 @@
       "tests/**"
     ]
   },
-  "prettier": "@arapucajs/prettier-config",
+  "prettier": "@arapucajs/prettier",
   "devDependencies": {
     "@arapucajs/prettier": "^1.1.1",
-    "@arapucajs/tsconfig": "^1.6.2",
+    "@arapucajs/tsconfig": "^1.0.0",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@stylistic/eslint-plugin-ts": "^4.4.1",
     "@swc/cli": "^0.7.7",
     "@swc/core": "^1.12.7",
     "@types/node": "^24.0.8",
-    "@typescript-eslint/rule-tester": "^8.35.1",
+    "@typescript-eslint/rule-tester": "^8.37.0",
     "c8": "^10.1.3",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
@@ -75,6 +75,7 @@
     "eslint": "^9.30.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
+    "eslint-plugin-unicorn": "^59.0.1",
     "husky": "^9.1.7",
     "prettier": "^3.6.2",
     "ts-node-maintained": "^10.9.5",
@@ -84,6 +85,9 @@
   },
   "dependencies": {
     "@typescript-eslint/utils": "^8.35.1"
+  },
+  "peerDependencies": {
+    "eslint": "^9.30.0"
   },
   "config": {
     "commitizen": {
