fix(actions): voltando o repo antigo

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -6,10 +6,10 @@ on:
 
 jobs:
   test:
-    uses: arapucajs/actions/.github/workflows/test.yml@main
+    uses: arapucajs/.github/.github/workflows/test.yml@main
 
   lint:
-    uses: arapucajs/actions/.github/workflows/lint.yml@main
+    uses: arapucajs/.github/.github/workflows/lint.yml@main
 
   typecheck:
-    uses: arapucajs/actions/.github/workflows/typecheck.yml@main
+    uses: arapucajs/.github/.github/workflows/typecheck.yml@main
