--- a/package.json
+++ b/package.json
@@ -80,8 +80,6 @@
     "@swc/cli": "^0.7.7",
     "@swc/core": "^1.12.7",
     "@types/node": "^24.0.8",
-    "@typescript-eslint/parser": "^8.43.0",
-    "@typescript-eslint/rule-tester": "^8.37.0",
     "bun-types": "^1.2.22",
     "c8": "^10.1.3",
     "commitizen": "^4.3.1",
@@ -99,7 +97,11 @@
     "typescript-eslint": "^8.35.1"
   },
   "dependencies": {
-    "@typescript-eslint/utils": "^8.35.1"
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
+    "@typescript-eslint/rule-tester": "^8.43.0",
+    "@typescript-eslint/types": "^8.43.0",
+    "@typescript-eslint/utils": "^8.43.0"
   },
   "peerDependencies": {
     "eslint": "^9.30.0"
