--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: Publish package to GitHub Packages
 on:
-  release:
-    types: [published]
-  push:
-    tags:
+    push:
+      tags:
       - 'v*.*.*'
+      branches:
+      - main
 jobs:
   gh-pkg-deploy:
     runs-on: ubuntu-latest
