--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,49 @@
-name: Publish package to GitHub Packages
+name: checks
 on:
-    push:
-      tags:
-      - 'v*.*.*'
-      branches:
+  push:
+    branches:
       - main
+
 jobs:
+  typecheck:
+    uses: arapucajs/.github/.github/workflows/typecheck.yml@main
+
+  lint:
+    needs: typecheck
+    uses: arapucajs/.github/.github/workflows/lint.yml@main
+
+  test:
+    needs: lint
+    uses: arapucajs/.github/.github/workflows/test.yml@main
+
+  release:
+    needs: test
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: googleapis/release-please-action@v4
+        id: release
+        with:
+          release-type: node
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install dependencies
+        run: npm ci
+      - name: Build Release Artifact
+        if: ${{ steps.release.outputs.release_created }}
+        run: |
+          mkdir -p artifact
+          npm pack --pack-destination artifact
+      - name: Upload Release Artifact
+        if: ${{ steps.release.outputs.release_created }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh release upload ${{ steps.release.outputs.tag_name }} artifact/*.tgz
+
   gh-pkg-deploy:
+    needs: release
     runs-on: ubuntu-latest
     permissions:
       contents: read
