--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,17 +6,17 @@ on:
 
 jobs:
   typecheck:
-    if: ${{ !needs.release.outputs.release_created }}
+    if: github.ref_type != 'tag'
     uses: arapucajs/.github/.github/workflows/typecheck.yml@main
 
   lint:
     needs: typecheck
-    if: ${{ !needs.release.outputs.release_created }}
+    if: github.ref_type != 'tag'
     uses: arapucajs/.github/.github/workflows/lint.yml@main
 
   test:
     needs: lint
-    if: ${{ !needs.release.outputs.release_created }}
+    if: github.ref_type != 'tag'
     uses: arapucajs/.github/.github/workflows/test.yml@main
 
   release:
@@ -65,14 +65,19 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           # Defaults to the user or organization that owns the workflow file
           scope: '@arapucajs'
-      - run: npm ci
-      - run: npm run build
-      - run: npm publish --access public
+      - name: Install dependencies
+        if: github.ref_type == 'tag' || github.ref == 'refs/heads/main'
+        run: npm ci
+      - name: Build
+        if: github.ref_type == 'tag' || github.ref == 'refs/heads/main'
+        run: npm run build
+      - name: Publish package
+        if: github.ref_type == 'tag' || github.ref == 'refs/heads/main'
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   npm-deploy:
     needs: gh-pkg-deploy
-    if: ${{ needs.release.outputs.release_created }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -84,7 +89,12 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
-      - run: npm ci
-      - run: npm publish --provenance --access public
+
+      - name: Install dependencies
+        if: github.ref_type == 'tag' || github.ref == 'refs/heads/main'
+        run: npm ci
+      - name: Publish package
+        if: github.ref_type == 'tag' || github.ref == 'refs/heads/main'
+        run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
