fix(erro): aterando pre commit para correcao de eeros

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,11 @@
 name: Release
 on:
-  workflow_run:
-    workflows: ["Checks"]
-    types:
-      - completed
+  push:
+    branches:
+      - main
 
 jobs:
   release:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
