--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,7 @@
 name: Deploy
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+  release:
+    types: [published]
 permissions:
   contents: read
   packages: write
